# modern-image-support

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  supportWebp.cpp  supportWebp.pyi  supportWebp.pyx  webp_support.pyi  webp_support_c.c
.github/workflows/: ci-cd.yml  python-publish.yml
examples/: benchmark.py  django_example.py  example_usage.py  fastapi_example.py  flask_example.py  test_support.py
modern_image_support/: __init__.py  modern_image_support.pxd  modern_image_support.pyi  modern_image_support.pyx  modern_image_support_c.h
webp_support/: __init__.py
