[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1", "cython==3.1.2"]
build-backend = "setuptools.build_meta"

[project]
name = "modern-image-support"
version = "0.4.0"
authors = [{ name = "bymoye", email = "s3moye@gmail.com" }]
description = "Quickly determine WebP and AVIF image format support from UserAgent strings."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["webp", "avif", "image", "user-agent", "browser-detection"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/bymoye/modern-image-support"
Repository = "https://github.com/bymoye/modern-image-support"
"Bug Tracker" = "https://github.com/bymoye/modern-image-support/issues"

[project.optional-dependencies]
dev = [
    "setuptools==80.9.0",
    "wheel==0.45.1", 
    "cython==3.1.2",
    "build>=1.0.0",
    "cibuildwheel>=2.16.0",
]
test = [
    "pytest>=7.0.0",
]
